src/routes/game/join/Join.module.css
.button {
  color: black;
}

.LoginPageContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  max-width: var(--aspect);
  margin: 0 auto;
}

.fieldError {
  color: red;
}

.formContainer {
  scroll-margin-top: 100px;
  margin-top: 20px;
  width: 460px;
  border: 1px solid var(--theme-border, rgba(255, 255, 255, 0.2));
  border-radius: 10px;
}

.alarm {
  color: var(--alarm);
}

@media (max-width: 768px) {
  .formContainer {
    width: 100%;
    border: none;
  }
}

